# jive

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: Conan.cmake  DefineProjectOnce.cmake  Standalone.cmake  StandardProjectSettings.cmake
examples/: CMakeLists.txt  colorize.cpp  cpuinfo.cpp  version.cpp
jive/: CMakeLists.txt  angles.h  auto_format.h  averaging_window.h  begin.h  binary_io.h  block_timer.h  buffer.h  circular_buffer.h  circular_index.h  cleanup.h  colorize.cpp  colorize.h  compare.h  comparison_operators.h  compiler.h  constexpr_shim.h  create_exception.h  describe_type.h  eigen.h  endian_tools.h  equal.h  errno_exception.h  error.h  for_each.h  format_paragraph.cpp  format_paragraph.h  formatter.h  future.h  hex_formatter.h  huffman.cpp  huffman.h  id_bytes.h  insertion_map.h  integer_window.h  list_directory.cpp  list_directory.h  marshall.h  multiply_rounded.h  numeric_string_compare.cpp  (+35 more)
jive/detail/: auto_format_detail.h  binary_io_detail.h  binary_io_impl.h  describe_type_detail.h  marshall_detail.h  precise_string_detail.h  strings_detail.h  strings_impl.h  to_integer_detail.h  transaction_detail.h
jive/socket/: address.h  client.h  error.h  object_client.h  socket.h
jive/testing/: cast_limits.h  directory_creator.h  duration_limits.h  generator_limits.h  gettys_words.h  random_type.h
test/: CMakeLists.txt  angles_tests.cpp  binary_io_tests.cpp  buffer_tests.cpp  circular_index_tests.cpp  comparison_operator_tests.cpp  create_exception_tests.cpp  format_tests.cpp  id_bytes_tests.cpp  list_directory_tests.cpp  marshall_tests.cpp  multiply_rounded_tests.cpp  overflow_tests.cpp  path_tests.cpp  power_tests.cpp  precise_string_tests.cpp  revision_tests.cpp  scope_flag_tests.cpp  socket_tests.cpp  strings_tests.cpp  thread_pool_tests.cpp  time_value_tests.cpp  to_float_tests.cpp  to_integer_tests.cpp
test/utility/: directory_creator.h  duration_limits.h  gettys_words.h  unique
